Fix chat box close button positioning and width issues on mobile

--- a/frontend/static/css/components/panels.css
+++ b/frontend/static/css/components/panels.css
@@ -278,7 +278,7 @@ body.dark-mode .close-btn:active {
 }
 
 #chatClose {
-  position: sticky;
+  position: absolute;
   top: 2px;
   right: 2px;
   align-self: flex-end;
