--- a/frontend/static/css/responsive.css
+++ b/frontend/static/css/responsive.css
@@ -204,7 +204,8 @@
   body.chat-open #chatBox {
     display: flex;
     max-height: 40vh;
-    max-width: calc(98% - 20px);
+    max-width: calc(95% - 20px);
+    margin-left: 10px;
     padding: 36px 8px 8px;
     overflow: hidden;
     border-radius: 0;
